# mtg-card-scanner

./: .gitignore  pyproject.toml
src/: candidates.ipynb  enhancements.py  exploration.ipynb  functions.py  video_expl.ipynb
